Change styling to avoid audio player covering current text from named anchor clicks.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-padding-top: 60px;
+}
+
 /* latin-ext */
 @font-face {
   font-family: "Lato";
